@@ -128,6 +128,7 @@ class SolverChoiceDelegate(QItemDelegate):
         editor.addItem("GMRES")
         editor.addItem("Gauss Seidel")
         editor.addItem("conjugate residual")
+        editor.addItem("Inexact conjugate gradient")
         if mg:
             editor.addItem("Multigrid")
         editor.installEventFilter(self)
@@ -135,9 +136,16 @@ class SolverChoiceDelegate(QItemDelegate):
 
 
     def setEditorData(self, comboBox, index):
-        dico = {"automatic": 0, "conjugate_gradient": 1, "jacobi": 2,
-                "bi_cgstab": 3, "bi_cgstab2": 4, "gmres": 5, "multigrid": 8,
-                "gauss_seidel": 6, "PCR3": 7}
+        dico = {"automatic": 0,
+                "conjugate_gradient": 1,
+                "jacobi": 2,
+                "bi_cgstab": 3,
+                "bi_cgstab2": 4,
+                "gmres": 5,
+                "gauss_seidel": 6,
+                "PCR3": 7,
+                "inexact_conjugate_gradient": 8,
+                "multigrid": 9}
         row = index.row()
         string = index.model().dataSolver[row]['iresol']
         idx = dico[string]
@@ -499,6 +507,7 @@ class StandardItemModelSolver(QStandardItemModel):
     def populateModel(self):
         self.dicoV2M= {"Multigrid"          : 'multigrid',
                        "Conjugate gradient" : 'conjugate_gradient',
+                       "Inexact conjugate gradient"     : 'inexact_conjugate_gradient',
                        "Jacobi"             : 'jacobi',
                        "BiCGstab"           : 'bi_cgstab',
                        "BiCGstab2"          : 'bi_cgstab2',
@@ -510,6 +519,7 @@ class StandardItemModelSolver(QStandardItemModel):
                        "Polynomial"         : "polynomial"}
         self.dicoM2V= {"multigrid"          : 'Multigrid',
                        "conjugate_gradient" : 'Conjugate gradient',
+                       "inexact_conjugate_gradient"     : 'Inexact conjugate gradient',
                        "jacobi"             : 'Jacobi',
                        "bi_cgstab"          : 'BiCGstab',
                        "bi_cgstab2"         : 'BiCGstab2',
